--- a/index.html
+++ b/index.html
@@ -4,11 +4,33 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>!Pinterest</title>
+  <link rel="stylesheet" href="./styles/main.css">
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
+
+  <h1>!Pinterest</h1>
+
+  <form class="form">
+    <input type="text" name="query" class="search">
+    <input type="submit" class="submit">
+  </form>
+  <button class="button">Random</button>
   
+
+  <div class="gallery">
+    <img class="gallery__photo" src="" alt="">
+    <img class="gallery__photo" src="" alt="">
+    <img class="gallery__photo" src="" alt="">
+    <img class="gallery__photo" src="" alt="">
+    <img class="gallery__photo" src="" alt="">
+    <img class="gallery__photo" src="" alt="">
+    <img class="gallery__photo" src="" alt="">
+    <img class="gallery__photo" src="" alt="">
+    <img class="gallery__photo" src="" alt="">
+  </div>
+
 
 <script src="scripts/index.js"></script>
 </body>
