--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,30 +9,45 @@
   <link rel="stylesheet" href="./styles/main.css">
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
+
 <body>
 
-  <h1>!Pinterest</h1>
 
-  <form class="form">
-    <input type="text" name="query" class="search">
-    <input type="submit" class="submit">
-  </form>
-  <button class="button">Random</button>
-  
 
-  <div class="gallery">
-    <img class="gallery__photo" src="" alt="">
-    <img class="gallery__photo" src="" alt="">
-    <img class="gallery__photo" src="" alt="">
-    <img class="gallery__photo" src="" alt="">
-    <img class="gallery__photo" src="" alt="">
-    <img class="gallery__photo" src="" alt="">
-    <img class="gallery__photo" src="" alt="">
-    <img class="gallery__photo" src="" alt="">
-    <img class="gallery__photo" src="" alt="">
+  <div class="container">
+
+    <div class="container__left">
+      <h1 class="heading"><span class="heading__span">!</span>Pinterest</h1>
+
+      <div class="container__button">
+
+        <form class="form">
+          <input type="text" name="query" class="form__search" placeholder="Search...">
+          <!-- <input type="submit" class="submit" class="form__submit"> -->
+        </form>
+        <button class="button">Random</button>
+
+      </div>
+    </div>
+
+
+    <div class="gallery">
+      <img class="gallery__photo" src="" alt="">
+      <img class="gallery__photo" src="" alt="">
+      <img class="gallery__photo" src="" alt="">
+      <img class="gallery__photo" src="" alt="">
+      <img class="gallery__photo" src="" alt="">
+      <img class="gallery__photo" src="" alt="">
+      <img class="gallery__photo" src="" alt="">
+      <img class="gallery__photo" src="" alt="">
+      <img class="gallery__photo" src="" alt="">
+    </div>
+
   </div>
 
 
-<script src="scripts/index.js"></script>
+  <script src="scripts/index.js"></script>
+  <script src="scripts/background.js"></script>
 </body>
+
 </html>
